--- a/.gitignore
+++ b/.gitignore
@@ -238,3 +238,8 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+# Results
+results_data/
+
+.DS_Store
