--- a/.gitignore
+++ b/.gitignore
@@ -239,7 +239,7 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
-# Results
+# ModelResults
 reports/
 
 .DS_Store
