--- a/.gitignore
+++ b/.gitignore
@@ -239,11 +239,12 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
-# ModelResults
+# Model results and reports
+results/
 reports/
-
-.DS_Store
-
 
 # Data
 /data/
+
+
+.DS_Store
