Remove run_model_bash.py from git tracking

--- a/.gitignore
+++ b/.gitignore
@@ -260,6 +260,8 @@ data/inputs
 /scripts/sketchbook.py
 /scripts/augmecon/run_augmecon.py
 /scripts/augmecon/get_payoff_tables.py
+/scripts/run_model_bash.py
+
 /src/visualisation/plot_tst.py
 /src/config/independent_variables.py
 
